# sparkstack

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  Dockerfile.gateway-custom  Dockerfile.sandbox-custom  Dockerfile.vllm-progress  LICENSE  Makefile  README.md  TODO.md  agent_output.txt  bandit.json  current  docker-compose.override.yml  fix_openclaw.py  otel-preload.mjs  parse_trace.py  patch_cmd.py  patch_openclaw.py  pyproject.toml  pytest_out.txt  renovate.json  scratch_refactor.py  sparkstack.yaml.example  task.md  test_app.py  test_inference.py  test_litellm.py  test_richlog.py  test_table.py
.gemini/: settings.json
benchmarks/: .gitignore
cloudflare/: README.md  docker-compose.yml  tunnel.sh
core/: constants.py  discovery.py  env.py  registry.py  schemas.py  statsd.py  utils.py
manager/: build_stack.py  check_memory_law.py  clear_stuck_sessions.py  launch.py  set_current.py  sync_registry.py  update_openclaw.py  update_services.py  update_sparkrun.py  wait_for_backends.py
monitoring/: config.alloy  docker-compose.yml  model_progress_manager.py  otel-collector.yaml  prometheus.yml  telemetry_multiplexer_design.md  tempo.yaml  vector.yaml
openclaw/: CHANGELOG.md  docker-compose.yml  pr_feedback.txt
plans/: gemma4_plan.md  multnode_plan.md  service_plan.md  token_budget_algorithm.md
registry/: README.md  super_v3_reasoning_parser.py
scripts/: analyze_traces.py  build_stack.py  check_memory_law.py  clear_stuck_sessions.py  detect_api.py  export_recipe.py  launch.py  set_current.py  submodule_status.py  sync_registry.py  update_monitoring.py  update_openclaw.py  update_services.py  update_sparkrun.py  verify.py  verify_hf_model.py  (+1 more)
(+329 files in other folders)
